set volume bài hát

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           min="0"
           max="100"
         />
+        <div class="time-update">
+          <span class="time-left">00:00</span>
+          <span class="time-right">00:00</span>
+        </div>
+       <div class="volume"> <input class="volume-bar" type="range" value="100" step="1" min="0" max="100"/></div>
 
         <audio id="audio" src=""></audio>
       </div>
